# data-service

./: .dockerignore  .env  .gitignore  AGENTS.MD  API_CONTRACT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  plan.md  pyproject.toml  pyrightconfig.json  requirements.txt
alembic/: env.py
alembic/versions/: 2026_04_26_0858-2dbc8b425ce5_first_migration.py  2026_04_26_0943-44102d918926_enrich_investor_wide_columns.py  2026_04_26_0953-19c18d5d4db4_slug_required_unique.py
app/: main.py
app/api/routes/: enrichment.py  health.py  indexing.py  ingest.py  investors.py  matching.py
app/core/: config.py
app/db/: models_metadata.py  session.py  timestamps.py  types.py
app/enrichment/: models.py  routes.py  schemas.py  service.py
app/importer/: dedupe.py  normalise.py  parsers.py
app/investors/: models.py  routes.py  schemas.py  service.py
app/models/: enrichment.py  investors.py
app/repositories/: matching_read_repo.py  retrieval_repo.py
app/schemas/: matching.py
app/services/: import_service.py  investor_search.py  new_import_service.py
data/raw/: source1.csv  source2.csv  source3.csv  source4.csv
scripts/: clean_sectors.py  import_vc_data.py  lint.sh  run_migration.py
sql/: migration_enrichment_contract.sql  migration_v2_expanded_fields.sql  migration_v3_deep_enrichment.sql  migration_v4_delete_cascades.sql  retrieval_matching_schema.sql  schema.sql
tests/: conftest.py
tests/enrichment/: test_enrichment_routes.py  test_enrichment_service.py
tests/investors/: test_investors_routes.py  test_investors_service.py
(+10 files in other folders)
